WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74611
[BlackBerry] Regression: lots of checkerboarding
https://bugs.webkit.org/show_bug.cgi?id=74611
Summary
[BlackBerry] Regression: lots of checkerboarding
Jacky Jiang
Reported
2011-12-15 08:47:27 PST
Regression: lots of checkerboarding instroduced by
r102843
. PR #128357.
Attachments
Patch
(4.34 KB, patch)
2011-12-15 09:37 PST
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2011-12-15 09:37:14 PST
Created
attachment 119441
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-15 16:41:16 PST
Comment on
attachment 119441
[details]
Patch Clearing flags on attachment: 119441 Committed
r102998
: <
http://trac.webkit.org/changeset/102998
>
WebKit Review Bot
Comment 3
2011-12-15 16:41:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug